--- a/index.html
+++ b/index.html
@@ -1,77 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/vite.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="assets/img/favicons/apple-icon-57x57.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="assets/img/favicons/apple-icon-60x60.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="assets/img/favicons/apple-icon-72x72.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="assets/img/favicons/apple-icon-76x76.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="assets/img/favicons/apple-icon-114x114.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="assets/img/favicons/apple-icon-120x120.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="assets/img/favicons/apple-icon-144x144.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="assets/img/favicons/apple-icon-152x152.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/img/favicons/apple-icon-180x180.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="assets/img/favicons/android-icon-192x192.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/img/favicons/favicon-32x32.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="assets/img/favicons/favicon-96x96.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/img/favicons/favicon-16x16.png"
+      href="assets/img/favicons/logo.jpg"
     />
     <link rel="manifest" href="assets/img/favicons/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
@@ -114,7 +115,8 @@
     <script src="assets/js/particles.min.js"></script>
     <script src="assets/js/particles-config.js"></script>
     <script src="assets/js/main.js"></script>
-    <title>Vite + React</title>
+
+    <title>Logimetrix Techsoutions pvt ltd</title>
   </head>
   <body>
     <div id="root"></div>
